[package]
name = "contrast-checker"
version = "0.1.0"
authors = ["patchan <11303629+patchan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
contrast = "0.1.0"
rgb = "0.8.25"
rust-hsluv = "0.1.4"